--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="frontend/styles/main.css">
 </head>
 <body>
+    
     <!--navbar-->
     <div class="container">
         <nav class="row navbar navbar-expand-lg navbar-light bg-none">
@@ -50,12 +51,12 @@
                     <a href="contact.html" class="nav-link">Contact</a>
                 </li>
                </ul> 
-                   <!--mobile button-->
+                   <!--mobile button
                    <form class="form-inline d-sm-block d-md-none">
                        <button class="btn btn-login my-2 my-sm-0">
                            Sign in
                        </button>
-                   </form>
+                   </form>-->
 
                    <!--dekstop button-->
                    <form class="form-inline my-2 my-lg-0 d-none d-md-block">
