--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <header class="text-center">
         <h1>Welcome to</h1>
         <p class="Judul mt-3">
-            SMA INFORMATIKA
+            digilat.id
         </p>
         <a href="#" class="btn btn-get-started px-4 mt-4">
             Get Started
